--- a/application-stock/src/main/resources/application.yml
+++ b/application-stock/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
       type: com.alibaba.druid.pool.DruidDataSource
       master:
-        url: jdbc:mysql://127.0.0.1:3306/master?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+        url: jdbc:mysql://192.168.1.50:3306/stock-master?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false&zeroDateTimeBehavior=convertToNull
         driver-class-name: com.mysql.jdbc.Driver
         username: root
         password: root
@@ -23,7 +23,7 @@ spring:
         filters: stat,wall,log4j2
         pool-prepared-statements: false
       slave:
-        url: jdbc:mysql://127.0.0.1:3306/slave?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+        url: jdbc:mysql://192.168.1.50:3306/stock-slave?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false&zeroDateTimeBehavior=convertToNull
         driver-class-name: com.mysql.jdbc.Driver
         username: root
         password: root
@@ -40,41 +40,49 @@ spring:
         filters: stat,wall,log4j2
         pool-prepared-statements: false
   redis:
-    host: 127.0.0.1
-    port: 6379
+#    host: 127.0.0.1
+#    port: 6379
     database: 0
     timeout: 1000
     cluster:
-      nodes: 127.0.0.1:6379
-      max-redirects: 10
+      nodes:
+       - 192.168.1.51:7001
+       - 192.168.1.51:7002
+       - 192.168.1.52:7003
+       - 192.168.1.52:7004
+       - 192.168.1.53:7005
+       - 192.168.1.53:7006
+      max-redirects: 10 #获取失败最大重定向次数
     lettuce:
       pool:
-        max-active: 100
-        max-wait: 3s
-        min-idle: 0
-        max-idle: 10
-  rabbitmq:
-      addresses: 30.23.16.73:5672
-      username: dev
-      password: dev
-  cloud:
-      stream:
-        bindings:
-          testProduceCmdChannel:   #定义通道，和bindings整合
-            destination: testProduceCmd   #表示要使用的rabbit exchange名称定义
-            group: web-edit
-            consumer:
-              concurrency: 4
-        rabbit:
-          bindings:
-            testProduceCmdChannel:    #绑定rabbit通道
-              consumer:
-                auto-bind-dlq: true
-                republish-to-dlq: true
+        max-active: 100 #连接池最大连接数
+        max-wait: 3s    #连接池最大阻塞等待时间
+        min-idle: 0     #连接池的最小空闲连接
+        max-idle: 10    #连接池的最大空闲连接
+#  rabbitmq:
+#      addresses: 30.23.16.73:5672
+#      username: dev
+#      password: dev
+#  cloud:
+#      stream:
+#        bindings:
+#          testProduceCmdChannel:   #定义通道，和bindings整合
+#            destination: testProduceCmd   #表示要使用的rabbit exchange名称定义
+#            group: web-edit
+#            consumer:
+#              concurrency: 4
+#        rabbit:
+#          bindings:
+#            testProduceCmdChannel:    #绑定rabbit通道
+#              consumer:
+#                auto-bind-dlq: true
+#                republish-to-dlq: true
 
 mybatis:
   type-aliases-package: com.jinchi.stock.domain.entity
-  mapperLocations: classpath*:mapper/*.xml
+  mapperLocations: classpath:mapper/*.xml
+  configuration:
+    cache-enabled: false
 pagehelper:
   helper-dialect: mysql
 
