--- a/application-stock/build.gradle
+++ b/application-stock/build.gradle
@@ -21,18 +21,14 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-openfeign')
     compile('org.springframework.cloud:spring-cloud-starter-sleuth')
 
-    // spring-cloud-stream
-    compile('org.springframework.cloud:spring-cloud-starter-stream-rabbit')
-    compileOnly('org.springframework:spring-web')
-    compileOnly('org.springframework.boot:spring-boot-autoconfigure')
-    compileOnly('org.springframework.boot:spring-boot-configuration-processor')
+    // spring-cloud-stream-kafka
+    compile('org.springframework.cloud:spring-cloud-stream')
+    compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
+    compile('org.springframework.kafka:spring-kafka')
 
     // ehcache
     compile('org.springframework.boot:spring-boot-starter-cache')
     compile('net.sf.ehcache:ehcache:2.9.1')
-
-    // kafka
-    compile('org.apache.kafka:kafka_2.9.2:0.8.1')
 
     compile project(':spring-messaging')
     compile project(':common-base')
