--- a/application-order/src/main/resources/application.yml
+++ b/application-order/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     password:
   datasources:
     gps_com:
-      url: jdbc:mysql://127.0.0.1:3306/gps_com?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false
+      url: jdbc:mysql://192.168.1.50:3306/gps_com?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: root
@@ -29,7 +29,7 @@ spring:
       filters: stat,wall,log4j2
       pool-prepared-statements: false
     db_201810:
-      url: jdbc:mysql://127.0.0.1:3306/db_201810?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false
+      url: jdbc:mysql://192.168.1.50:3306/db_201810?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: root
@@ -46,7 +46,7 @@ spring:
       filters: stat,wall,log4j2
       pool-prepared-statements: false
     db_201811:
-      url: jdbc:mysql://127.0.0.1:3306/db_201811?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false
+      url: jdbc:mysql://192.168.1.50:3306/db_201811?characterEncoding=UTF-8&serverTimezone=GMT&allowMultiQueries=true&useSSL=false
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: root
@@ -62,20 +62,21 @@ spring:
       test-on-return: false
       filters: stat,wall,log4j2
       pool-prepared-statements: false
-  rabbitmq:
-      addresses: 30.23.16.73:5672
-      username: dev
-      password: dev
   cloud:
-      stream:
-        bindings:
-          testProduceCmdChannel:   #绑定通道
-            destination: testProduceCmd   #表示要使用的rabbit exchange名称定义
+    stream:
+      kafka:
+        binder:
+          brokers: 192.168.1.51:9092,192.168.1.52:9092,192.168.1.53:9092     #Kafka的消息中间件服务器
+          auto-create-topics: true                     #如果设置为false,就不会自动创建Topic 有可能你Topic还没创建就直接调用了。
+      bindings:
+        notify-stock-delivery-output:
+          destination:  notify-stock-delivery           #消息发往的目的地
+          content-type: application/json       #消息发送的格式，接收端不用指定格式，但是发送端要
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:8761/eureka/
+      defaultZone: http://127.0.0.1:8769/eureka/
 
 mybatis:
   type-aliases-package: com.jinchi.order.domain.entity
