--- a/application-stock/src/main/resources/application.yml
+++ b/application-stock/src/main/resources/application.yml
@@ -62,24 +62,25 @@ spring:
         max-wait: 3s    #连接池最大阻塞等待时间
         min-idle: 0     #连接池的最小空闲连接
         max-idle: 10    #连接池的最大空闲连接
-#  rabbitmq:
-#      addresses: 30.23.16.73:5672
-#      username: dev
-#      password: dev
-#  cloud:
-#      stream:
-#        bindings:
-#          testProduceCmdChannel:   #定义通道，和bindings整合
-#            destination: testProduceCmd   #表示要使用的rabbit exchange名称定义
-#            group: web-edit
-#            consumer:
-#              concurrency: 4
-#        rabbit:
-#          bindings:
-#            testProduceCmdChannel:    #绑定rabbit通道
-#              consumer:
-#                auto-bind-dlq: true
-#                republish-to-dlq: true
+  cloud:
+    stream:
+      kafka:
+        binder:
+          brokers: 192.168.1.51:9092,192.168.1.52:9092,192.168.1.53:9092   #Kafka的消息中间件服务器
+          auto-create-topics: true                     #如果设置为false,就不会自动创建Topic 有可能你Topic还没创建就直接调用了。
+      bindings:
+        notify-stock-delivery-input:
+          destination: notify-stock-delivery
+          group: stream-order-stock-group
+          consumer:
+            # 最多尝试处理几次，默认3
+            maxAttempts: 2
+            # 重试时初始避退间隔，单位毫秒，默认1000
+            backOffInitialInterval: 1000
+            # 重试时最大避退间隔，单位毫秒，默认10000
+            backOffMaxInterval: 10000
+            # 避退乘数，默认2.0
+            backOffMultiplier: 2.0
 
 mybatis:
   type-aliases-package: com.jinchi.stock.domain.entity
