--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,9 @@ subprojects {
     dependencies {
         compile('org.springframework.boot:spring-boot-starter')
         compile('org.springframework.boot:spring-boot-starter-log4j2')
-        compile('org.projectlombok:lombok:1.18.0')
         testCompile('org.springframework.boot:spring-boot-starter-test')
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
+        annotationProcessor 'org.projectlombok:lombok:1.18.10'
     }
 
     configurations {
